--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- 
+    <meta name="google-signin-client_id" content="480181438061-hs781145qtaelkqmpvopfl68ovfuinsc.apps.googleusercontent.com">
     <meta name="google-signin-client_id" content="480181438061-hthmagt8t2cn56l8d08ek4e33njo9h5k.apps.googleusercontent.com">
+    -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -28,8 +31,7 @@
        crossorigin="anonymous"
     />
     <script src="https://apis.google.com/js/platform.js"></script>
-    <script src="/opus-recorder/dist/recorder.min.js"></script>
-
+  
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
